3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Those fixes make DMs more 'stealthy' (when hiding/unhiding).
Also use yet unused colors for player join/leave, and DM join/leave.
This way those messages appear in a different window in split window
mode, to make the messages easier to spot.
server/apply.c: change color for player leave message.
server/c_misc.c: let DMs see hidden DMs.
server/c_wiz.c: make DMs more stealthy.
server/login.c: change color for player joining message.
server/main.c: change color for player joining/exiting message.
Ryo 2004-03-12

common/item.c: Fixed calc_item_power() to return valid item power for
   items with high enchantments.
Andreas Kirschbaum 2004-03-07

server/spell_effect.c: small patch by Karla Stenger to put player's name
   in the 'race' field of marking runes. This way, a DM can know who wrote
   a rune, in case it has some bad vocabulary :)
Ryo 2004-03-06

server/spell_attack.c: change check_cone_push function to use arch weights.
move function up for resuability and change to check_spell_knockback
include/sproto.h: change function name
TM 2004-02-28


common/image.c: removed unused variables.
common/item.c: conditionally remove unused variables.
common/map.c: conditionally define variables, unused under Windows.
include/global.h: turned off a conversion warning under Windows.
Ryo 2004-02-28


common/living.c: changed 'signed char' to 'sint8' for set|get|change_attr_value.
common/map.c: map size is sint16, for arch_blocked.
include/libproto.h: update prototypes for set|get|change_attr_value and arch_blocked.
random_maps/rproto.h: changed prototype for surround_flag3.